--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -5,6 +5,8 @@ include blocks/header-blog
 include blocks/footer
 include blocks/copyright
 include blocks/navigation
+include blocks/preloader
+include blocks/popup
 
 block variables
 
@@ -37,3 +39,4 @@ html(lang="ru_RU")
             block footer
 
         +navigation()
+        +preloader()
