--- a/source/style/blocks/_navigation.scss
+++ b/source/style/blocks/_navigation.scss
@@ -1,12 +1,13 @@
 .navigation {
     opacity: 0;
-    display: block;
+    display: none;
     @include centered(full);
     z-index: -10;
     padding: 2rem;
     text-align: center;
     background-color: rgba(#6c9c5a, .85);
     &.open {
+        display: block;
         opacity: 1;
         z-index: 10;
     }
