--- a/source/style/blocks/_welcom-menu.scss
+++ b/source/style/blocks/_welcom-menu.scss
@@ -15,6 +15,9 @@
     &:first-child {
         border-bottom-left-radius: 5px;
         flex: 1 1 40%;
+        &:before {
+            content: none;
+        }
     }
     &:nth-child(2) {
         flex: 1 1 33%;
@@ -35,9 +38,6 @@
         position: absolute;
         top: 0;
         width: 2px;
-        &:first-child {
-            content: none;
-        }
     }
 }
 
