--- a/source/style/blocks/_works-slider.scss
+++ b/source/style/blocks/_works-slider.scss
@@ -1,10 +1,9 @@
 .works-slider {
     display: flex;
-    flex-flow: column wrap;
     height: 100vh;
     min-height: 750px;
     @include tablets() {
-        flex-wrap: nowrap;
+        flex-direction: column;
         height: auto;
     }
     @include phones() {
@@ -12,19 +11,104 @@
     }
 }
 
-.works-slider__desc {
-    display: flex;
-    height: 100%;
-    flex-flow: column;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
+.works-slider__col {
+    &--left {
+        width: 50%;
+        @include tablets() {
+            width: 100%;
+            display: flex;
+        }
+    }
+    &--right {
+        width: 50%;
+        @include tablets() {
+            width: 100%;
+        }
+    }
+}
+
+.works-slider__wrapper {
+    max-width: 900px;
+    position: relative;
+    &--left {
+        margin-left: auto;
+        padding: 20px;
+        position: relative;
+        height: 100%;
+        @include tablets() {
+            width: 100%;
+            padding: 0;
+            height: auto;
+        }
+        @include phones() {
+            padding-bottom: 2.143rem;
+        }
+    }
+    &--right {
+        margin-right: auto;
+        height: 100%;
+        @include tablets() {
+            height: 215px;
+        }
+        @include phones() {
+            height: 10.643rem;
+        }
+        @include smallPhones() {
+            height: 6.65rem;
+        }
+    }
+}
+
+.works-slider__image-wrapper {
+    position: absolute;
+    height: 70%;
+    left: 100%;
+    width: 100%;
+    top: 0;
+    z-index: 10;
+    padding: rem(114px) rem(64px) rem(100px) rem(57px);
+    background-color: #e1e4d7;
     @include tablets() {
-        width: 100%;
-        padding: rem(39px) rem(0px) rem(60px) rem(0px);
+        position: relative;
+        left: 0;
+        height: 388px;
+        padding: 7.125rem 5.7rem 2.25rem 5rem;
     }
     @include phones() {
-        padding: rem(29px) rem(0px) rem(30px) rem(0px);
+        padding: rem(49px) rem(33px) rem(47px) rem(37px);
+    }
+}
+
+.works-slider__image {
+    display: block;
+    width: 100%;
+    height: 100%;
+    @include tablets() {
+        max-width: 80%;
+        max-height: 80%;
+    }
+}
+
+.works-slider__desc {
+    @include centered(both);
+    max-width: 420px;
+    width: 100%;
+    text-align: center;
+    top: 48%;
+    @include tablets() {
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: static;
+        transform: translate(0, 0);
+        left: 0;
+        padding: 44px 20px 60px;
+        top: 0;
+    }
+    @include phones() {
+        padding: 0;
+        padding-top: 2rem;
     }
 }
 
@@ -80,53 +164,27 @@
     @include centered('y');
 }
 
-.works-slider__image-wrapper {
-    display: flex;
-    height: 70%;
-    width: 50%;
-    align-items: center;
-    justify-content: center;
-    padding: rem(114px) rem(64px) rem(100px) rem(57px);
-    background-color: #e1e4d7;
-    @include tablets() {
-        width: 100%;
-        order: -1;
-        padding: 7.125rem 5.7rem 2.25rem 5rem;
-    }
-    @include phones() {
-        padding: rem(49px) rem(33px) rem(47px) rem(37px);
-    }
-}
-
-.works-slider__image {
-    display: block;
-    max-height: 311px;
-    max-width: 479px;
-    width: 100%;
-    height: 100%;
-    @include tablets() {
-        position: static;
-        max-height: 100%;
-        max-width: 100%;
-    }
-}
-
-.works-slider-list {
+.slider {
     display: flex;
     height: 30%;
-    width: 50%;
-    list-style: none;
+    width: 100%;
+    @include centered(x);
+    bottom: 0;
     @include tablets() {
-        width: 100%;
         height: 100%;
     }
 }
 
-.works-slider-list__item {
-    position: relative;
+.slider__link {
     width: 50%;
     padding: rem(30px) rem(15px);
     list-style: none;
+    position: relative;
+    outline: none;
+    overflow: hidden;
+    height: 100%;
+    float: left;
+    display: block;
     @include tablets() {
         padding: rem(15px) rem(49px);
     }
@@ -145,9 +203,40 @@
     &:last-child:after {
         background-color: rgba(147, 153, 141, 0.7);
     }
+    &:hover {
+        .slider-arrow__img {
+            opacity: 0.7;
+        }
+    }
 }
 
-.works-slider-list__image {
+.slider__list {
+    @include centered(full);
+    display: flex;
+    height: 100%;
+    width: 100%;
+    list-style: none;
+    @include tablets() {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.slider__item {
+    position: absolute;
+    padding: rem(30px) rem(15px);
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    bottom: 0;
+    &.active {
+        top: 0;
+    }
+}
+
+.slider__image {
+    display: block;
     width: 100%;
     height: 100%;
     max-width: 300px;
@@ -163,43 +252,18 @@
     }
 }
 
-.works-slider-arrow {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+.slider-arrow {
+    @include centered(full);
     cursor: pointer;
     z-index: 100;
-    width: 100%;
-    max-width: 300px;
-    max-height: 226px;
-    height: 100%;
-    @include tablets() {
-        max-width: 100%;
-        max-height: 100%;
+    &--top {
+        transform: rotate(180deg);
     }
 }
 
-.works-slider-arrow__img {
+.slider-arrow__img {
     width: 43px;
     height: 27px;
     fill: $white;
     @include centered('both');
-    &:hover {
-        opacity: 0.5;
-    }
-}
-
-.works-slider-arrow__img--top {
-    left: 43%;
-    top: 42%;
-    transform: rotate(-180deg);
-    @include tablets() {
-        left: 44.5%;
-    }
-    @include phones() {
-        left: 39%;
-        top: 37%;
-    }
 }
