--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -6,7 +6,7 @@ block variables
         title = 'Обо мне|Арсений Березин frontend developer'
 block content
     +header('portfolio')
-    section.section.about.js-section-content
+    section.section.about.js-section-content.js-animate
         .about__col.about__col--left
             +leftTriangle('about')
             .about__wrapper.about__wrapper--left
@@ -28,7 +28,7 @@ block content
                     .about-me__info
                         p
                             | Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
-                    ul.skills-group
+                    ul.skills-group#skills
                         li.skills-group__item
                                 .skills-group__title Frontend
                                 +skills({
