fix add script src

--- a/source/template/_template.pug
+++ b/source/template/_template.pug
@@ -26,8 +26,8 @@ html(lang="ru_RU")
 
         link(rel='stylesheet' href='assets/css/foundation.css')
         link(rel='stylesheet' href='assets/css/app.css')
-        script(src='/assets/js/foundation.js' defer)
-        script(src='/assets/js/app.bundle.js' defer)
+        script(src='assets/js/foundation.js' defer)
+        script(src='assets/js/app.bundle.js' defer)
 
         <!--[if lt IE 9]>
         script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
