--- a/source/template/pages/about.pug
+++ b/source/template/pages/about.pug
@@ -24,7 +24,7 @@ block content
             +rightTriangle('about')
             .about__wrapper.about__wrapper--right
                 .skills
-                    +blockTitle('Чем я вам могу быть полезен','line')
+                    +blockTitle('Чем я вам могу быть полезен','line', 'about')
                     .about-me__info
                         p
                             | Больше всего меня привлекет Frontend разработка, но я также знаком и могу решать не сложные задачи на Backend. Но давайте по порядку.
