--- a/source/style/blocks/_navigation.scss
+++ b/source/style/blocks/_navigation.scss
@@ -100,6 +100,7 @@
     @include tablets {
         font-size: 49px;
         padding: 40px 0;
+        padding-bottom: 10px;
         &:after {
             bottom: 0;
         }
