--- a/source/style/pages/_blog.scss
+++ b/source/style/pages/_blog.scss
@@ -34,10 +34,11 @@
     }
     .fixed {
         position: fixed;
-        top: 2%;
+        position: fixed;
+        top: 3px;
         width: 15.5%;
         @include desctop() {
-            width: 21.5%;
+            width: 18.4%;
         }
     }
 }
@@ -48,6 +49,7 @@
 
 .blog-sidebar__item {
     display: block;
+    position: relative;
     font-size: 1rem;
     color: $blockTitleColor;
     @include roboto;
@@ -56,8 +58,21 @@
     padding-right: 17px;
     cursor: pointer;
     &--active {
-        border-right: 3px solid $greenHover;
-        color: $greenHover;
+        &:after {
+            content: "";
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 3px;
+            height: 100%;
+            background-color: $greenHover;
+        }
+    }
+    &--tab {
+        color: $white;
+        &:after {
+            background-color: $white;
+        }
     }
 }
 
@@ -89,4 +104,42 @@
         margin-bottom: rem(9px);
         font-size: rem(14px);
     }
+}
+
+.t-blog-article {
+    position: fixed;
+    width: 50%;
+    height: 100vh;
+    background-color: $greenHover;
+    left: 0;
+    top: 0;
+    opacity: .95;
+    transition: left .4s;
+    display: none;
+    z-index: 111;
+    @include tablets() {
+        display: block;
+    }
+    &.close {
+        left: -50%;
+    }
+}
+
+.t-blog-article__wrapper {
+    width: 100%;
+    height: 100%;
+    padding: 5%;
+    text-align: right;
+    position: relative;
+}
+
+.t-blog-article__handler {
+    position: absolute;
+    right: -1.25rem;
+    top: 50%;
+    width: 1.25rem;
+    height: 2.5rem;
+    background: $greenHover;
+    border-bottom-right-radius: 40px;
+    border-top-right-radius: 40px;
 }
